[package]
name = "client"
version = "0.1.0"
authors = ["Parth Patel <54561512+protocol66@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
get_if_addrs = "0.5.3"
tungstenite = "0.13.0"
url = "2.2.1"